[package]
name = "canvas-http-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ril = { version = "0.10.1", features = ["all"] }
awc = { version =  "3.4.0", features = ["rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
actix-web = "4"
env_logger = "0.10.0"
